<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/btnPurchase"
        android:layout_width="198dp"
        android:layout_height="51dp"
        android:layout_marginEnd="104dp"
        android:layout_marginBottom="96dp"
        android:background="@color/colorPrimary"
        android:text="@string/comprarCarrito"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/btnIniciar"
        android:layout_width="198dp"
        android:layout_height="51dp"
        android:layout_marginEnd="104dp"
        android:layout_marginBottom="96dp"
        android:background="@color/colorPrimary"
        android:text="@string/loginNav"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/btnEmpty"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="136dp"
        android:layout_marginBottom="32dp"
        android:background="@color/colorButtons"
        android:text="@string/vaciarCarrito"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <ListView
        android:id="@+id/lstMain"
        android:layout_width="325dp"
        android:layout_height="482dp"
        app:layout_constraintBottom_toTopOf="@+id/btnPurchase"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>